Translate2 - Org/src/objects/Tran1__c.object
<CustomObject>
    <description>*** Account Order Details</description>
    <fields>
        <fullName>Accountoutside__c</fullName>
        <formula>if ( Field44__c = &quot;00&quot; &amp;&amp;  (Field39__c  &lt;&gt; 0 ||  CONTAINS( Field5__c , &quot;●&quot;) )  &amp;&amp; ( Field2__c =&quot;M&quot;  ||  Field2__c =&quot;P&quot; ||  Field2__c =&quot;R&quot;) &amp;&amp;  Field3__c = &quot;1&quot; &amp;&amp;  Field4__c =&quot;1&quot; &amp;&amp;  Field22__c   &lt;&gt;  &quot;+000&quot; &amp;&amp;  VoidReceiptNo__c =&quot;0&quot; &amp;&amp;  noneaccount__c = false , 1, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>$取引種別 次の文字列と一致する 00  かつ $単価 次の文字列と一致しない 0 かつ 商品種別 次の文字列と一致する M,P かつ 処理種別１ 次の文字列と一致する 1 かつ 処理種別２ 次の文字列と一致する 1 かつ 残数量 次の文字列と一致しない +000 かつ $VoidReceiptNo 次の文字列と一致する 0  かつ 集計対象外 次の文字列と一致する False
飲み放題のときは売価¥0でも集計対象とするため</inlineHelpText>
        <label>$集計対象外</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ActionType__c</fullName>
        <description>普通の商品は　デフォルト値：通常で設定する、特別商品に対して、別々、商品種別に設定する
前受付金の場合、会計商品マスたに、価格はNull設定して、入力画面に自由入力する</description>
        <label>商品処理種別</label>
        <picklist>
            <picklistValues>
                <fullName>通常</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>前受付金</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>室料</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>朝食</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>C__c</fullName>
        <formula>Field7__r.GPChange__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>カテゴリC</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CategoryItem__c</fullName>
        <description>マスタの更新ごとにチェック必要、商品コードの範囲をチェックしているため、レストランにて食事&amp;ドリンクかまたは、喫茶の判断は、会計書の客単価 &gt;= ¥3,250(料理の最低金額)のときは、食事&amp;ドリンクとなる
if ( Field7__r.nextitemcode__c &gt;= 0 &amp;&amp; Field7__r.nextitemcode__c &lt;= 3000 &amp;&amp;  Field1__r.TeaTimeFlag__c = 0 &amp;&amp; (  Categorya__c =&quot;A1_料理関連&quot; || Categorya__c =&quot;B1_ドリンク関連&quot; ), 1, if ( Field7__r.nextitemcode__c &gt;= 0 &amp;&amp; Field7__r.nextitemcode__c &lt;= 3000 &amp;&amp; ( Categorya__c =&quot;B1_ドリンク関連&quot; ||  Categorya__c =&quot;A1_料理関連&quot; ), 2, if ( Field7__r.nextitemcode__c &gt;= 3100 &amp;&amp; Field7__r.nextitemcode__c &lt;= 4000 &amp;&amp; ( Field7__r.OP__r.OPcode1__c = 32 || Field7__r.OP__r.OPcode1__c = 33 ), 3, if ( Field7__r.nextitemcode__c &gt;= 7100 &amp;&amp; Field7__r.nextitemcode__c &lt;= 8600 &amp;&amp; ( Categorya__c =&quot;A1_料理関連&quot; || Categorya__c =&quot;B1_ドリンク関連&quot; ), 4, if ( Field7__r.OP__r.OPcode1__c = 30, 5 , 0)))))</description>
        <formula>if ( Field7__r.nextitemcode__c &gt;= 0 &amp;&amp; Field7__r.nextitemcode__c &lt;= 3000 &amp;&amp;  Field1__r.TeaTimeFlag__c = 0 &amp;&amp; (  Categorya__c =&quot;A1_料理関連&quot; || Categorya__c =&quot;B1_ドリンク関連&quot; ), 1, if ( Field7__r.nextitemcode__c &gt;= 0 &amp;&amp; Field7__r.nextitemcode__c &lt;= 3000 &amp;&amp; ( Categorya__c =&quot;B1_ドリンク関連&quot; ||  Categorya__c =&quot;A1_料理関連&quot; ), 2, if ( Field7__r.nextitemcode__c &gt;= 3100 &amp;&amp; Field7__r.nextitemcode__c &lt;= 4000 &amp;&amp; ( Field7__r.OP__r.OPcode1__c = 32 || Field7__r.OP__r.OPcode1__c = 33 ), 3, if ( Field7__r.nextitemcode__c &gt;= 7100 &amp;&amp; Field7__r.nextitemcode__c &lt;= 8600 &amp;&amp; ( Categorya__c =&quot;A1_料理関連&quot; || Categorya__c =&quot;B1_ドリンク関連&quot; ), 4, if ( Field7__r.OP__r.OPcode1__c = 30, 5 , 0)))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>マスタの商品コードの範囲チェック   1:賑わい亭でお食事(OPcode=会席またはお膳), 2:賑わい亭で喫茶(OPcode=一般飲料またはワンドリンク), 3:賑わい亭の入浴(OPcode=入浴料またはタオル・浴衣), 4:お部屋でお食事(OPcode=会席またはお膳,一般飲料,), 5:宿泊(OPcode=宿泊室料)</inlineHelpText>
        <label>$CategoryItem</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Category__c</fullName>
        <formula>Field7__r.OP__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>カテゴリB</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Categorya__c</fullName>
        <formula>Field7__r.OP__r.Field1__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>カテゴリA</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DivisionNameI__c</fullName>
        <formula>CASE(  CategoryItem__c  , 1, &quot;D_レストラン部門&quot;, 2, &quot;D_レストラン部門&quot;, 3, &quot;D_レストラン部門&quot;, 4, &quot;E_宿泊部門&quot;,  5, &quot;E_宿泊部門&quot;, &quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>$部門</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Field10__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>親メニューコード</label>
        <referenceTo>AccountMaster__c</referenceTo>
        <relationshipName>Tran1Parent</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Field11__c</fullName>
        <label>親メニュー名称</label>
        <length>24</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Field12__c</fullName>
        <label>自社コード</label>
        <length>13</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Genkaritsu__c</fullName>
        <formula>if ( rtaxsts__c = &quot;0&quot; , if (Field39__c  &lt;&gt;  0,Field47__c /  Tankanonetax__c , 1), 1   )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>税ステータスが通常のときは、原価/売価(税込)/1.05、税金のときは、原価率100%とし、利益率はゼロとなる。</inlineHelpText>
        <label>原価率</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>GoukeinoneTax__c</fullName>
        <description>Tankanonetax__c * Field40__c
if ( Field7__r.StsTaxfee__c = &quot;0&quot;,if (  Field41__c &lt;&gt; 0, if ( MOD(Field41__c,(1 + TaxRate__c)) = 0.00, Field41__c/(1 + TaxRate__c), (Field41__c/(1 + TaxRate__c)) + 1.00), 0), Field41__c)
if ( Field7__r.StsTaxfee__c = &quot;0&quot;,if (  Field41__c &lt;&gt; 0, if ( MOD(Field41__c,(1 + TaxRate__c)) = 0, Field41__c/(1 + TaxRate__c), ROUND(Field41__c/(1 + TaxRate__c),0 )), 0), Field41__c)
if ( Field7__r.StsTaxfee__c = &quot;0&quot;,if ( Field41__c &lt;&gt; 0, if ( MOD(Field41__c,(1 + TaxRate__c)) = 0.00, Field41__c/(1 + TaxRate__c), (Field41__c/(1 + TaxRate__c)) + (1.00 - MOD(Field41__c,(1 + TaxRate__c)))), 0), Field41__c)

if ( Field7__r.StsTaxfee__c = &quot;0&quot;,if ( Field41__c &lt;&gt; 0, if ( MOD(Field41__c,(1 + TaxRate__c)) = 0, Field41__c/(1 + TaxRate__c), ROUND((Field41__c/(1 + TaxRate__c)) + (1.00 - MOD(Field41__c,(1 + TaxRate__c))),0) ), 0), Field41__c)</description>
        <formula>Tankanonetax__c * Field40__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>単価ではなく、$合計金額（税込）に対して、直接税抜き計算、端数があれば切り上げ処理</inlineHelpText>
        <label>$合計金額（税抜）</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>InvoiceNoShowFlg__c</fullName>
        <defaultValue>false</defaultValue>
        <description>請求書に該当商品情報を明細に非表示する</description>
        <label>請求書非表示</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>KanjoHojo__c</fullName>
        <formula>Field7__r.KanjoKamokuRef__r.KanjoHojoname__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>$補助科目</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Kanjo__c</fullName>
        <formula>Field7__r.KanjoKamokuRef__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>勘定科目</inlineHelpText>
        <label>$科目</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OPcode__c</fullName>
        <description>CASE(Field26__r.Name, &quot;ドリンク&quot;,0.20, &quot;ミニバー&quot;, 0.20, &quot;飲み放題&quot;, 0.27, &quot;宿泊 ドリンク&quot;, 0.20, &quot;宿泊 飲み放題&quot;, 0.27, &quot;コース&quot;,0.30, &quot;アラカルト&quot;, 0.30, &quot;宿泊 コース&quot;,0.30, &quot;宿泊 アラカルト&quot;, 0.30, &quot;室料&quot;, 0.08, &quot;宿泊 売店&quot;,0.50, &quot;売店&quot;,0.50, case(Field25__r.Name,&quot;婚礼 飲料売上&quot;,0.20,&quot;婚礼 料理売上&quot;,0.30, 0.00))</description>
        <formula>0.30</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>原価率目標値、GP codeにて、料理30%、ドリンク20%、売店50%、室料8%、飲み放題は内訳の平均値27%</inlineHelpText>
        <label>$OPcode</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>POSNo__c</fullName>
        <inlineHelpText>POSレジ番号</inlineHelpText>
        <label>POSNo.</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ParentTran1Ref__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>親会計明細</label>
        <referenceTo>Tran1__c</referenceTo>
        <relationshipLabel>会計明細</relationshipLabel>
        <relationshipName>ParentTran1Ref</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PlanDetailSyncInfo__c</fullName>
        <description>会計編集画面、直接入力のプラン明細の単価を格納する、該当項目で、明細自動作成・更新する場合、該当単価で、明細へ連携更新を行う 
Format: 商品ID/会計明細ID,単価:商品ID/会計明細ID,単価 書式で複数件格納する（最大600件明細格納可能です）</description>
        <label>プラン明細個別設定情報</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>RelAccount__c</fullName>
        <label>予約会計</label>
        <referenceTo>RsvAccount__c</referenceTo>
        <relationshipLabel>会計明細</relationshipLabel>
        <relationshipName>TitemYObe</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>RowNo__c</fullName>
        <description>会計書のNo.項目</description>
        <label>RowNo.</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Seq__c</fullName>
        <formula>Field1__r.Seq__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>$Seq</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ServiceRate__c</fullName>
        <description>サービス料金（％）</description>
        <label>サービス料</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>SpecialTax__c</fullName>
        <label>特別税</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SplitGroupNo__c</fullName>
        <label>分割NO</label>
        <picklist>
            <picklistValues>
                <fullName>01</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>02</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>03</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>04</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>05</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>06</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>07</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>08</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>09</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Subprice__c</fullName>
        <inlineHelpText>サブ単価</inlineHelpText>
        <label>f単価(税込)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TableNo__c</fullName>
        <label>TableNo</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tankanonetax__c</fullName>
        <description>if ( Field7__r.StsTaxfee__c = &quot;0&quot;, if ( MOD(Field39__c,(1 + TaxRate__c)) = 0,Field39__c /(1 + TaxRate__c), if ( ROUND(MOD(Field39__c,(1 + TaxRate__c)),2) &gt;= 0.30, ROUND(Field39__c /(1 + TaxRate__c),0),Field39__c /(1 + TaxRate__c) )), Field39__c)

2012/07/04 四捨五入から切り上げ設定</description>
        <formula>/*if ( Field7__r.StsTaxfee__c = &quot;0&quot;, CEILING(Field39__c /(1 + TaxRate__c)), Field39__c) */
/*
    // 1:税込、サービス料抜き
    // 2:税込、サービス料込
    // 3:税抜、サービス料抜き
*/
Case ($Setup.CommDefine__c.UnitPriceDefKb__c ,
1, CEILING( Field39__c / ( 1 +  NULLVALUE (TaxRate__c, 0) ) ),
2, CEILING( Field39__c / ( (1 + NULLVALUE (TaxRate__c, 0) ) * ( 1 + NULLVALUE (ServiceRate__c, 0) ) ) ), 
3, Field39__c ,
0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>会計マスタの税ステータスが税額そのもののときは単価（税抜）の金額は単価そのものとする、端数処理について、端数が存在すれば切り上げ処理となっている。
***近似の0.3スライス</inlineHelpText>
        <label>$単価(税抜)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TankawithoutTax__c</fullName>
        <label>$$単価(税抜)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TaxRate__c</fullName>
        <label>消費税</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>TotalPriceIncTax__c</fullName>
        <label>合計金額(税込)</label>
        <precision>15</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>VoidReceiptNo__c</fullName>
        <formula>IF ( Field1__r.Field40__c  = &quot;&quot;, &quot;0&quot;, Field1__r.Field40__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>$VoidReceiptNo</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>freecost__c</fullName>
        <formula>IF (  CONTAINS(Field5__c, &quot;●&quot;)  ,  Field47__c , 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>f原単価</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>freeprice__c</fullName>
        <formula>if ( Field7__r.StsTaxfee__c = &quot;0&quot;, if ( MOD( Subprice__c ,(1 + TaxRate__c)) = 0,Subprice__c /(1 + TaxRate__c), if ( ROUND(MOD(Subprice__c,(1 + TaxRate__c)),2) &gt;= 0.30, ROUND(Subprice__c /(1 + TaxRate__c),0),Subprice__c /(1 + TaxRate__c) )), Subprice__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>f単価(税抜)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>freetotal1__c</fullName>
        <formula>Subprice__c  *  Field40__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>f合計金額(税込)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>freetotal2__c</fullName>
        <formula>freeprice__c  *  Field40__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>f合計金額(税抜)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>freetotal3__c</fullName>
        <formula>freecost__c  *  Field40__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>f原単価計</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>guestRoom__c</fullName>
        <description>if ( value(Field25__r.Field1__c) &gt;= 41 &amp;&amp; value(Field25__r.Field1__c) &lt;= 66, Field25__r.Name , Field1__r.Field150__r.Name )</description>
        <formula>if ( value(Field25__r.Field1__c) &gt;= 41 &amp;&amp;  value(Field25__r.Field1__c) &lt;= 66,  Field25__r.Name ,  Field1__r.Field150__r.Name  )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>DPコードが客室または広間のときは、DPコードをそのまま返す、そうでなければ、テーブル#を返す</inlineHelpText>
        <label>$GuestRoom</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>inside__c</fullName>
        <formula>if (  Accountoutside__c = 0, &quot;&quot;, IMAGE(&quot;/resource/&quot; &amp; $Setup.CommDefine__c.AppNS__c &amp; &quot;A&quot;, &quot;対象&quot;) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>A</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>noneaccount__c</fullName>
        <defaultValue>false</defaultValue>
        <label>集計対象外</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>profit__c</fullName>
        <formula>1 - Genkaritsu__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>粗利益率</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>profitnonetax__c</fullName>
        <formula>value(TEXT(profitt__c)) * Field40__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>粗利益計(税抜)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>profitt__c</fullName>
        <formula>if (  rtaxsts__c  = &quot;0&quot;,  Tankanonetax__c  -  Field47__c, Field39__c- Field47__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>売価-原価、税ステータスありなら、単価(税抜)売価/1.05-原価</inlineHelpText>
        <label>粗利益</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>rtaxsts__c</fullName>
        <formula>Field7__r.StsTaxfee__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>$税ステータス</label>
        <type>Text</type>
    </fields>
    <label>会計明細</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>すべて選択</label>
    </listViews>
    <nameField>
        <displayFormat>{YYYY}{MM}{DD}-{000}</displayFormat>
        <label>会計明細TranR#</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>